<resources>
    <string name="app_name">StipJe(S)Trip</string>
    <string name="txt_tv_title">Stip Je (S)Trip</string>
    <string name="txt_tv_copyright"><![CDATA[©Chiel & Jara]]></string>
    <string name="txt_mi_search">Search</string>
    <string name="txt_btn_menu_bar">All bars</string>
    <string name="txt_btn_menu_comic">All comics</string>
    <string name="txt_switch_comics">Comics</string>
    <string name="txt_switch_bars">Bars</string>
    <string name="menu_title_lists">View :</string>
    <string name="txt_title_menu_filter">"Filter : "</string>
    <string name="txt_title_menu_about">About us</string>
    <string name="txt_menu_title_more">More :</string>
    <string name="txt_tv_about_intro">We are Chiel and Jara. We created an app for you, to tour around in Brussels and follow the comicroute. As an addition to the comicroute, we also included bars that are nearby. So you can find the closest place to have a drink!</string>
    <string name="txt_tv_about_assignment">This app was an assignment in the course "Mobile Application Development", at the Erasmushogeschool Brussel, Departement Design and Technology. This course is a colaboration with VDAB.</string>
    <string name="txt_rv_rating">Rating :   . / 10</string>
    <string name="txt_title_rating_alert">Give your rating</string>
    <string name="txt_rating_onten">/ 10</string>
    <string name="txt_btn_menu_myFav">My favorites</string>
    <string name="content_descr_background">Background about</string>
    <string name="content_descr_tapImage">Tap Image Detail</string>
    <string name="content_descr_likeDetail">Like button Detail</string>
    <string name="content_descr_seenDetail">Seen button Detail</string>
    <string name="content_descr_mapDetail">Map button Detail</string>
    <string name="content_descr_loadingImage">Loading image</string>
    <string name="content_descr_comicImage">Comic Image</string>
    <string name="content_descr_backgroundButton">Background</string>
    <string name="content_descr_info">Info button</string>
    <string name="content_descr_beerLogo">Beer Logo</string>
</resources>
