<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/title_menu_filter"
            android:title="@string/txt_title_menu_filter">
            <menu>
                <item
                    android:id="@+id/sw_strip"
                    android:checked="false"
                    android:icon="@mipmap/ic_launcher_foreground_garfield"
                    android:title="@string/txt_switch_comics"
                    app:actionLayout="@layout/switch_item"
                    app:showAsAction="always" />

                <item
                    android:id="@+id/sw_café"
                    android:checked="false"
                    android:icon="@drawable/beer"
                    android:title="@string/txt_switch_bars"
                    app:actionLayout="@layout/switch_item"
                    app:showAsAction="always" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/title_menu_lists"
        android:title="@string/menu_title_lists">
        <menu>
            <item
                android:id="@+id/btn_strips"
                android:icon="@mipmap/ic_launcher_foreground_garfield"
                android:title="@string/txt_btn_menu_comic" />
            <item
                android:id="@+id/btn_café"
                android:icon="@drawable/beer"
                android:title="@string/txt_btn_menu_bar" />
            <item
                android:id="@+id/btn_myFav"
                android:icon="@drawable/like"
                android:title="@string/txt_btn_menu_myFav" />
        </menu>
    </item>
    <item
        android:id="@+id/title_menu_more"
        android:title="@string/txt_menu_title_more">
        <menu>
            <item
                android:id="@+id/btn_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/txt_title_menu_about" />
        </menu>
    </item>

</menu>
