<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_row_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/content_descr_comicImage"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/noimage" />

            <ImageView
                android:id="@+id/iv_button_background"
                android:layout_width="86dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_descr_backgroundButton"
                app:layout_constraintEnd_toEndOf="@+id/iv_row_image"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/colorAccent" />

            <TextView
                android:id="@+id/tv_row_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccentSeeThrough"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:fontFamily="sans-serif-smallcaps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_button_background"
                tools:text="voorbeeldnaam" />

            <TextView
                android:id="@+id/tv_row_author"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorAccentSeeThrough"
                android:contentDescription="@string/content_descr_backgroundButton"
                android:gravity="start|center_vertical"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:textColor="@color/colorBackground"
                android:textSize="12sp"
                app:fontFamily="sans-serif-smallcaps"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/iv_row_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_row_name"
                tools:text="voorbeeldauteur"
                android:paddingEnd="0dp" />

            <ImageButton
                android:id="@+id/btn_detail"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:background="@color/emptyBackground"
                android:contentDescription="@string/content_descr_info"
                android:scaleType="centerInside"
                android:tint="@color/colorBackground"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_menu_info_details" />

            <ImageButton
                android:id="@+id/btn_liked_list"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/emptyBackground"
                android:contentDescription="@string/content_descr_likeDetail"
                android:scaleType="fitCenter"
                android:tint="@color/colorBackground"
                app:layout_constraintEnd_toEndOf="@+id/iv_button_background"
                app:layout_constraintTop_toTopOf="@+id/iv_button_background"
                app:srcCompat="@drawable/like" />

            <ImageButton
                android:id="@+id/btn_visited_list"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/emptyBackground"
                android:contentDescription="@string/content_descr_seenDetail"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toStartOf="@+id/btn_liked_list"
                app:layout_constraintTop_toTopOf="@+id/iv_button_background"
                app:srcCompat="@drawable/seen_icon" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>